hlvm/test/invalid/signature.hlx
<?xml version="1.0" encoding="UTF-8"?>
<hlvm xmlns="http://hlvm.org/src/hlvm/Reader/XML/HLVM.rng" pubid="http://hlvm.org/src/hlvm/test/invalid/signature.hlx">
  <bundle id="signature">
    <signature id="callee_type"/>
  </bundle>
</hlvm>
